VR_Website.html

--- a/VR_Website.html
+++ b/VR_Website.html
@@ -26,12 +26,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ml-auto">
-                    <a class="nav-link active" id="custom_nav_menu1" href="#">Home<span class="sr-only">(current)</span></a>
-                    <a class="nav-link" id="custom_nav_menu2" href="https://vrproducts17.ccbp.tech">Products</a>
-                    <a class="nav-link" id="custom_nav_menu3" href="http://vrblogs17.ccbp.tech">Recent Blogs</a>
-                    <a class="nav-link" id="custom_nav_menu3" href="http://vroptical17.ccbp.tech">Optics & Controls</a>
-                    <a class="nav-link" id="custom_nav_menu4" href="http://vrkit17.ccbp.tech">Kit Section</a>
-                    <a class="nav-link" id="custom_nav_menu5" href="https://github.com/Saikumar-Nagineni/VR_Website">Code Reppo</a>
+                    <a class="nav-link active" id="custom_nav_menu" href="#">Home<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" id="custom_nav_menu" href="https://vrproducts17.ccbp.tech">Products</a>
+                    <a class="nav-link" id="custom_nav_menu" href="http://vrblogs17.ccbp.tech">Recent Blogs</a>
+                    <a class="nav-link" id="custom_nav_menu" href="http://vroptical17.ccbp.tech">Optics & Controls</a>
+                    <a class="nav-link" id="custom_nav_menu" href="http://vrkit17.ccbp.tech">Kit Section</a>
+                    <a class="nav-link" id="custom_nav_menu" href="https://github.com/Saikumar-Nagineni/VR_Website">Code Repo</a>
                 </div>
             </div>
         </div>
@@ -97,7 +97,7 @@
                         <h1 class="VR_website_features_section_card_heading mt-3">
                             Easy to connect
                         </h1>
-                        <p class="why_choose_us_section_card_description">
+                        <p class="VR_website_features_section_card_description">
                             Instead of viewing a screen in front of them,
                             users are immersed and able to interact with 3D worlds.
                         </p>
@@ -110,7 +110,7 @@
                         <h1 class="VR_website_features_section_card_heading mt-3">
                             VR Capability
                         </h1>
-                        <p class="why_choose_us_section_card_description">
+                        <p class="VR_website_features_section_card_description">
                             Virtual reality (VR) can create an environment
                             similar to or completely different from the real world
                         </p>
@@ -123,7 +123,7 @@
                         <h1 class="VR_website_features_section_card_heading mt-3">
                             Video games
                         </h1>
-                        <p class="why_choose_us_section_card_description">
+                        <p class="VR_website_features_section_card_description">
                             Ability to recognize hand motion,
                             evolving interaction and gameplay in VR.
                         </p>
@@ -136,7 +136,7 @@
                         <h1 class="VR_website_features_section_card_heading mt-3">
                             Interaction
                         </h1>
-                        <p class="why_choose_us_section_card_description">
+                        <p class="VR_website_features_section_card_description">
                             Interaction refers to the
                             <span class="span_section">natural inteaction</span>
                             between the user and the virtual scene.
@@ -150,7 +150,7 @@
                         <h1 class="VR_website_features_section_card_heading mt-3">
                             Easy to play
                         </h1>
-                        <p class="why_choose_us_section_card_description">
+                        <p class="VR_website_features_section_card_description">
                             In 360-degree video, the locations of viewers are fixed, viewers are limited to the angles captured by the cameras.
                         </p>
                     </div>
@@ -162,7 +162,7 @@
                         <h1 class="VR_website_features_section_card_heading mt-3">
                             Awesome Experience
                         </h1>
-                        <p class="why_choose_us_section_card_description">
+                        <p class="VR_website_features_section_card_description">
                             Virtual reality (VR) is a simulated experience-img
                             that can be similar to or completely different from the real world.
                         </p>
@@ -173,13 +173,38 @@
         </div>
     </div>
 
+    <div class="VR_Video pt-5 pb-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+
+                    <h1 class="detailed-view-card-heading pb-3">VR Video Demonstration</h1>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/XLP4YTpUpBI?rel=0" allowfullscreen></iframe>
+                    </div>
+
+                    <div class="detailed-view-card-text-container shadow">
+
+                        <p class="detailed-view-card-description text-center pt-5 pb-5">
+                            Virtual Reality (VR) is a computer-generated environment with
+                            scenes and objects that appear to be real, making the user feel
+                            they are immersed in their surroundings. This environment is
+                            perceived through a device known as a Virtual Reality headset or helmet
+                        </p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="VR_Website_Contact_Us_Section">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-7 order-md-2">
                     <h1 class="VR_Website_Contact_Us_Section_heading pl-5 pr-5">Virtually Anything is possible</h1>
                     <div class="text-center d-none d-md-block">
-                        <button class="VR_Website_Contact_Us_Section_button mt-3 mb-5 ">CONTACT US</button>
+                        <button class="VR_Website_Contact_Us_Section_button mt-3 mb-5 "> CONTACT US</button></a>
                     </div>
                 </div>
                 <div class="col-12 col-md-5 order-md-1">
@@ -191,9 +216,10 @@
                     </div>
                 </div>
             </div>
+
+
         </div>
     </div>
-
 
     <div class="bg_vr_website_footer_section">
         <div class="container-fluid">
@@ -234,7 +260,7 @@
 
 
                         <div class="col-12">
-                            <h1 class="VR_follow_section_address mt-3">37,Ayur Vigyan Nagar, New Delhi, India</h1>
+                            <h1 class="VR_follow_section_address mt-3">KPHB, Hyderabad, India</h1>
                         </div>
                     </div>
                 </div>
@@ -283,7 +309,7 @@
                 <div class="col-12">
                     <div class="d-flex flex-row justify-content-center">
                         <i class="fa fa-copyright icon-1"></i>
-                        <p class="VR_follow_section_address pt-3">2020 by Sampath. Created with Bootstrap</p>
+                        <p class="VR_follow_section_address pt-3">By Sai Kumar. Created with Bootstrap</p>
                     </div>
                 </div>
 
