--- a/VR_Website.html
+++ b/VR_Website.html
@@ -173,6 +173,136 @@
         </div>
     </div>
 
+    <div class="VR_images">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-2">
+
+                </div>
+
+                <div class="col-12 col-md-8">
+                    <div class="card shadow">
+                        <div class="detailed-view-card-container">
+                            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                                <ol class="carousel-indicators">
+                                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                                    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                                    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                                    <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                                    <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+                                </ol>
+                                <h1>Types of VR's</h1>
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active ">
+                                        <img src="https://res.cloudinary.com/djzukut2n/image/upload/v1693205226/img6_dy5gmr.webp" class="d-block w-100" alt=" ...">
+                                        <div class="detailed-view-card-text-container">
+                                            <h1 class="detailed-view-card-heading">Google Cardboard</h1>
+                                            <p class="detailed-view-card-description">
+                                                Just like its official slogan claimed, “Experience virtual reality in a simple, fun, and affordable way.” Google Cardboard, developed by Google for promotion of the VR concept, is indeed made up of cardboard, and in different sizes for compatibility with different smart phones. It was first distributed to attendants at the 2014 Google I/O meeting as a gift. Then, at the 2015 I/O meeting, Google announced the 2nd generation of Cardboard, as well as details of its parameters and production skills, making it possible for the general public to DIY their own VR device. The easiest application of the device is to view panoramas and videos. In addition, Google has launched a number of VR games on the Google Play store, such as the Titans of Space and Deep Space Battle. Regarding Google Cardboard’s low cost (as low as $15), you probably should not set your expectations too high, but it is enough for you to experience the basics of VR.
+
+
+                                            </p>
+                                        </div>
+                                    </div>
+
+
+
+                                    <div class="carousel-item">
+                                        <img src="https://res.cloudinary.com/djzukut2n/image/upload/v1693205225/img2_k4imqs.webp" class="d-block w-100" alt="...">
+                                        <div class="detailed-view-card-text-container">
+                                            <h1 class="detailed-view-card-heading">Samsung Gear VR</h1>
+                                            <p class="detailed-view-card-description">
+                                                Among the available products of premium mobile VR headsets, Samsung’s owns the best reputation so far for its great user experience. Its basic functions are very similar to Google Cardboard’s. However, Samsung Gear VR has an easy-to-use touch pad and is quite light-weighted, so you can play and watch more comfortably. Moreover, Samsung has been constantly improving user experience, including room for eyeglasses and more padding for extra comfort and durability. Price ranges from $60 to $100, which is rather affordable, compared with Oculus Rift or HTC Vive. One downside though, is that the device is only compatible with the Samsung’s Galaxy series smartphones.
+
+
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                    <div class="carousel-item">
+                                        <img src="https://res.cloudinary.com/djzukut2n/image/upload/v1693205226/img3_jnibuz.webp" class="d-block w-100" alt="...">
+                                        <div class="detailed-view-card-text-container">
+                                            <h1 class="detailed-view-card-heading">Oculus Rift</h1>
+                                            <p class="detailed-view-card-description">
+                                                Initiated as an independent company and acquired by Facebook in 2014, Oculus started developing Rift all the way back in 2012. Compared with the mobile headsets, Oculus Rift’s head-mounted display provides a view of higher resolution and broader field, in addition to its integrated headphones which provide a 3D audio effect. The sensor can normally sit on a desk, allowing you to use the device while sitting, standing, or walking around the same room. In June 2015, Oculus revealed that a successor to the Rift is likely to be released in around 2–3 years from the Rift release.
+
+
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                    <div class="carousel-item">
+                                        <img src="https://res.cloudinary.com/djzukut2n/image/upload/v1693204898/img1_slf9y7.webp" class="d-block w-100" alt="...">
+                                        <div class="detailed-view-card-text-container">
+                                            <h1 class="detailed-view-card-heading">IDEALENS K3 basic</h1>
+                                            <p class="detailed-view-card-description">
+                                                In December 2017, IDEALENS officially launched the third generation of VR all-in-one HMD IDEALENS K3 basic and VR education scheme at the Education Equipment Exhibition in China. During the CES, IDEALENS released the reference market price of K3 basic for USD 499.
+
+                                                IDEALENS plans to partner with the leading human-computer interaction technology company Leap Motion to embed its next generation hand tracking technology in IDEALENS K3-E headset. This inside-out tracking system operates without a controller or base station that most VR sets require, enabling students to explore the virtual world in a more natural way. In addition, IDEALENS K3 system supports Cardboard and Android applications, which allows users to have a fully immersive viewing experience anytime anywhere.
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                    <div class="carousel-item">
+                                        <img src="https://res.cloudinary.com/djzukut2n/image/upload/v1693205226/img4_xbmtlu.webp" class="d-block w-100" alt="...">
+                                        <div class="detailed-view-card-text-container">
+                                            <h1 class="detailed-view-card-heading">HTC Vive</h1>
+                                            <p class="detailed-view-card-description">
+                                                Released in April 2016, HTC Vive is one of the most premium VR headsets on the market with a relatively high price if $799. However, you do get more for what you pay, as the Vive captures your action accurately with low latency, so you can walk or move around more freely while wearing the headset, bringing a better experience of immersion. Besides, the bundle includes two controllers, the Lighthouse base stations, some ear buds plus games copies, creating a whole “VR-room” environment for users.
+
+
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                    <div class="carousel-item">
+                                        <img src="https://res.cloudinary.com/djzukut2n/image/upload/v1693205226/img5_sqj9yf.webp" class="d-block w-100" alt="...">
+                                        <div class="detailed-view-card-text-container">
+                                            <h1 class="detailed-view-card-heading">Sony PlayStation VR</h1>
+                                            <p class="detailed-view-card-description">
+                                                As the name suggests, PS VR is customized for PlayStation 4 platform, which would “redefine your expectations of immersion in gaming”. However, while PS VR’s sole compatibility with PS4 limits its audience, it also has great advantage as there will be a large number of exclusive games in the future. Thus, it is worth purchasing to those planning on getting PS4 at some point. Up until today, Sony has sold nearly one million Playstation VR headsets.
+
+
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                    <div class="carousel-item">
+                                        <img src="https://res.cloudinary.com/djzukut2n/image/upload/v1693206346/img7_oobd22.avif" class="d-block w-100" alt="...">
+                                        <div class="detailed-view-card-text-container">
+                                            <h1 class="detailed-view-card-heading">Apple VR headset</h1>
+                                            <p class="detailed-view-card-description">
+                                                The Apple VR headset has been in the works for a long time now. The company is expected to release its Oculus Quest and PlayStation VR competitor at WWDC on June 5, 2023. Recent rumors have offered a clearer picture of what to expect from this device, which might upset the average Apple enthusiast. For starters, the iPhone maker is targeting an insane price tag for their upcoming VR hardware.The brand is bundling high-end 4K micro-OLED displays with the upcoming Apple VR headset. The device is also rumored to pack 12 optical cameras for hand tracking.
+
+                                                <br>Earlier leaks also pointed out that two M2-based processors might power the headset. It is highly unlikely that the upcoming wearable will bundle desktop-grade chips, but a cut-down variant of the latest Apple silicon might fit perfectly into the VR headset.
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                        <span class="sr-only">Previous</span>
+                                    </a>
+                                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                        <span class="sr-only">Next</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-2">
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="VR_Video pt-5 pb-5">
         <div class="container">
             <div class="row">
@@ -189,7 +319,7 @@
                             Virtual Reality (VR) is a computer-generated environment with
                             scenes and objects that appear to be real, making the user feel
                             they are immersed in their surroundings. This environment is
-                            perceived through a device known as a Virtual Reality headset or helmet
+                            perceived through a device known as a Virtual Reality headset or helmet.
                         </p>
                     </div>
 
@@ -204,20 +334,21 @@
                 <div class="col-12 col-md-7 order-md-2">
                     <h1 class="VR_Website_Contact_Us_Section_heading pl-5 pr-5">Virtually Anything is possible</h1>
                     <div class="text-center d-none d-md-block">
-                        <button class="VR_Website_Contact_Us_Section_button mt-3 mb-5 "> CONTACT US</button></a>
+                        <a href="https://vrcondetailst17.ccbp.tech/"><button class="VR_Website_Contact_Us_Section_button mt-3 mb-5 ">CONTACT US</button></a>
+
                     </div>
                 </div>
                 <div class="col-12 col-md-5 order-md-1">
                     <div class="text-center">
                         <img class="VR_Website_Contact_Us_Section_image mt-3" src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-set-img.png" />
                     </div>
-                    <div class="text-center">
-                        <button class="VR_Website_Contact_Us_Section_button1 mt-3 mb-5 d-md-none ">CONTACT US</button>
+                    <div class="text-center mt-3 mb-5 d-md-none">
+                        <a href="https://vrcondetailst17.ccbp.tech/"><button class="VR_Website_Contact_Us_Section_button1 mt-3 mb-5 d-md-none">CONTACT US</button></a>
+
+
                     </div>
                 </div>
             </div>
-
-
         </div>
     </div>
 
